Bug fix on mobile navbar

--- a/themes/syna/assets/styles/_navbar.scss
+++ b/themes/syna/assets/styles/_navbar.scss
@@ -44,7 +44,7 @@ nav#static-navbar {
   color: $text;
 }
 
-@include media-query-max($md) {
+@include media-query-min($md) {
     nav#static-navbar {
       display: none;
     }
